docs(hello): add Javadoc links, run.sh section, and link to samples index